--- a/blingServer.service
+++ b/blingServer.service
@@ -3,7 +3,7 @@ Description=blingServer service
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python /home/pi/Documents/bling/blingServer/blingServer.py
+ExecStart=/usr/bin/python /home/pi/Documents/bling/blingServer/blingServer.py -s roboRIO-2706-FRC.local -l 32
 WorkingDirectory=/home/pi/Documents/bling/blingServer/
 
 [Install]
